# hw_technopark

./: CMakeLists.txt  Makefile  README.md  main.c
.github/workflows/: ci.yml
k_means_classic/: k_means.c  k_means.h
k_means_multiprocess/: CMakeLists.txt  k_means.c  k_means.h  k_means.h.gch
kmeans_common/: CMakeLists.txt  kmeans_common.c  kmeans_common.h
point/: CMakeLists.txt  point  point.c  point.h
test/: CMakeLists.txt  hw2_test.cpp
