cmake_minimum_required(VERSION 3.0.0)
project(KMEANSCOMMON)

set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-lm -g -O0 -Wall -W -fprofile-arcs -ftest-coverage")
set(KMEANSCOMMON_LIBRARIES)
set(KMEANSCOMMON_INCLUDE_DIRS)

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(KMEANSCOMMON_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(KMEANSCOMMON_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)